Refonte partielle des tests